--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,9 @@
-$body-bg: #eff6ff;
-$body-color: #6b7280;
+$body-bg: #faf2f2;
+$body-color: #a6da91;
 $font-size-base: 0.9rem;
 $input-btn-padding-x: 1.3rem;
 $input-btn-padding-x-lg: 1.2rem;
-$primary: #3882F6;
+$primary: #ffc116;
 $danger:#ff4136;
 $font-family-base: 'M PLUS Rounded 1c', sans-serif;
 
