--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #3882F6;
+  --primary: #ffc116;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -59,9 +59,9 @@ body {
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #6b7280;
+  color: #a6da91;
   text-align: left;
-  background-color: #eff6ff;
+  background-color: #faf2f2;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -154,13 +154,13 @@ sup {
 }
 
 a {
-  color: #3882F6;
+  color: #ffc116;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #0a5ad8;
+  color: #c99300;
   text-decoration: underline;
 }
 
@@ -480,7 +480,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #eff6ff;
+  background-color: #faf2f2;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -1840,7 +1840,7 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #6b7280;
+  color: #a6da91;
 }
 
 .table th,
@@ -1890,30 +1890,30 @@ pre code {
 }
 
 .table-hover tbody tr:hover {
-  color: #6b7280;
+  color: #a6da91;
   background-color: rgba(0, 0, 0, 0.075);
 }
 
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #c7dcfc;
+  background-color: #ffeebe;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #98befa;
+  border-color: #ffdf86;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #afcdfb;
+  background-color: #ffe7a5;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #afcdfb;
+  background-color: #ffe7a5;
 }
 
 .table-secondary,
@@ -2219,10 +2219,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #b2cffc;
+  border-color: #ffe396;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2299,7 +2299,7 @@ select.form-control:focus::-ms-value {
   margin-bottom: 0;
   font-size: 0.9rem;
   line-height: 1.5;
-  color: #6b7280;
+  color: #a6da91;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -2703,7 +2703,7 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #6b7280;
+  color: #a6da91;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -2730,14 +2730,14 @@ textarea.form-control {
 }
 
 .btn:hover {
-  color: #6b7280;
+  color: #a6da91;
   text-decoration: none;
 }
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2754,42 +2754,42 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #3882F6;
-  border-color: #3882F6;
+  color: #212529;
+  background-color: #ffc116;
+  border-color: #ffc116;
 }
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #136bf4;
-  border-color: #0b64f0;
+  color: #212529;
+  background-color: #efaf00;
+  border-color: #e2a600;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  color: #fff;
-  background-color: #136bf4;
-  border-color: #0b64f0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(86, 149, 247, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(86, 149, 247, 0.5);
+  color: #212529;
+  background-color: #efaf00;
+  border-color: #e2a600;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(222, 170, 25, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(222, 170, 25, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #3882F6;
-  border-color: #3882F6;
+  color: #212529;
+  background-color: #ffc116;
+  border-color: #ffc116;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #0b64f0;
-  border-color: #0a5fe4;
+  color: #212529;
+  background-color: #e2a600;
+  border-color: #d59d00;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(86, 149, 247, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(86, 149, 247, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(222, 170, 25, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(222, 170, 25, 0.5);
 }
 
 .btn-secondary {
@@ -3066,37 +3066,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #3882F6;
-  border-color: #3882F6;
+  color: #ffc116;
+  border-color: #ffc116;
 }
 
 .btn-outline-primary:hover {
-  color: #fff;
-  background-color: #3882F6;
-  border-color: #3882F6;
+  color: #212529;
+  background-color: #ffc116;
+  border-color: #ffc116;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #3882F6;
+  color: #ffc116;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #3882F6;
-  border-color: #3882F6;
+  color: #212529;
+  background-color: #ffc116;
+  border-color: #ffc116;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3339,12 +3339,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #3882F6;
+  color: #ffc116;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #0a5ad8;
+  color: #c99300;
   text-decoration: underline;
 }
 
@@ -3458,7 +3458,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 0.9rem;
-  color: #6b7280;
+  color: #a6da91;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -3641,7 +3641,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #3882F6;
+  background-color: #ffc116;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -4035,23 +4035,23 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #3882F6;
-  background-color: #3882F6;
+  border-color: #ffc116;
+  background-color: #ffc116;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #b2cffc;
+  border-color: #ffe396;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #e3edfe;
-  border-color: #e3edfe;
+  background-color: #fff0c9;
+  border-color: #fff0c9;
 }
 
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
@@ -4101,8 +4101,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #3882F6;
-  background-color: #3882F6;
+  border-color: #ffc116;
+  background-color: #ffc116;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4110,11 +4110,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(56, 130, 246, 0.5);
+  background-color: rgba(255, 193, 22, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(56, 130, 246, 0.5);
+  background-color: rgba(255, 193, 22, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -4126,7 +4126,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(56, 130, 246, 0.5);
+  background-color: rgba(255, 193, 22, 0.5);
 }
 
 .custom-switch {
@@ -4167,7 +4167,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(56, 130, 246, 0.5);
+  background-color: rgba(255, 193, 22, 0.5);
 }
 
 .custom-select {
@@ -4189,10 +4189,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #b2cffc;
+  border-color: #ffe396;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4254,9 +4254,9 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #b2cffc;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  border-color: #ffe396;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .custom-file-input[disabled] ~ .custom-file-label,
@@ -4320,16 +4320,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #eff6ff, 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
-          box-shadow: 0 0 0 1px #eff6ff, 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #faf2f2, 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
+          box-shadow: 0 0 0 1px #faf2f2, 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #eff6ff, 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  box-shadow: 0 0 0 1px #faf2f2, 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #eff6ff, 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  box-shadow: 0 0 0 1px #faf2f2, 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4340,7 +4340,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #3882F6;
+  background-color: #ffc116;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4359,7 +4359,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #e3edfe;
+  background-color: #fff0c9;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4375,7 +4375,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #3882F6;
+  background-color: #ffc116;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4394,7 +4394,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #e3edfe;
+  background-color: #fff0c9;
 }
 
 .custom-range::-moz-range-track {
@@ -4413,7 +4413,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #3882F6;
+  background-color: #ffc116;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4431,7 +4431,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #e3edfe;
+  background-color: #fff0c9;
 }
 
 .custom-range::-ms-track {
@@ -4546,8 +4546,8 @@ input[type="button"].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #eff6ff;
-  border-color: #dee2e6 #dee2e6 #eff6ff;
+  background-color: #faf2f2;
+  border-color: #dee2e6 #dee2e6 #faf2f2;
 }
 
 .nav-tabs .dropdown-menu {
@@ -4563,7 +4563,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #3882F6;
+  background-color: #ffc116;
 }
 
 .nav-fill > .nav-link,
@@ -5350,14 +5350,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #3882F6;
+  color: #ffc116;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #0a5ad8;
+  color: #c99300;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5366,8 +5366,8 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -5384,8 +5384,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #3882F6;
-  border-color: #3882F6;
+  background-color: #ffc116;
+  border-color: #ffc116;
 }
 
 .page-item.disabled .page-link {
@@ -5471,19 +5471,19 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: #3882F6;
+  color: #212529;
+  background-color: #ffc116;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
-  color: #fff;
-  background-color: #0b64f0;
+  color: #212529;
+  background-color: #e2a600;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(56, 130, 246, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 22, 0.5);
 }
 
 .badge-secondary {
@@ -5647,17 +5647,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #1d4480;
-  background-color: #d7e6fd;
-  border-color: #c7dcfc;
+  color: #85640b;
+  background-color: #fff3d0;
+  border-color: #ffeebe;
 }
 
 .alert-primary hr {
-  border-top-color: #afcdfb;
+  border-top-color: #ffe7a5;
 }
 
 .alert-primary .alert-link {
-  color: #142e56;
+  color: #564107;
 }
 
 .alert-secondary {
@@ -5803,7 +5803,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #3882F6;
+  background-color: #ffc116;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5874,7 +5874,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-action:active {
-  color: #6b7280;
+  color: #a6da91;
   background-color: #e9ecef;
 }
 
@@ -5905,8 +5905,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #3882F6;
-  border-color: #3882F6;
+  background-color: #ffc116;
+  border-color: #ffc116;
 }
 
 .list-group-item + .list-group-item {
@@ -6074,19 +6074,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #1d4480;
-  background-color: #c7dcfc;
+  color: #85640b;
+  background-color: #ffeebe;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #1d4480;
-  background-color: #afcdfb;
+  color: #85640b;
+  background-color: #ffe7a5;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #1d4480;
-  border-color: #1d4480;
+  background-color: #85640b;
+  border-color: #85640b;
 }
 
 .list-group-item-secondary {
@@ -6802,7 +6802,7 @@ a.close.disabled {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #6b7280;
+  color: #a6da91;
 }
 
 .carousel {
@@ -7120,13 +7120,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #3882F6 !important;
+  background-color: #ffc116 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #0b64f0 !important;
+  background-color: #e2a600 !important;
 }
 
 .bg-secondary {
@@ -7248,7 +7248,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #3882F6 !important;
+  border-color: #ffc116 !important;
 }
 
 .border-secondary {
@@ -10614,11 +10614,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #3882F6 !important;
+  color: #ffc116 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #0a5ad8 !important;
+  color: #c99300 !important;
 }
 
 .text-secondary {
@@ -10678,7 +10678,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-body {
-  color: #6b7280 !important;
+  color: #a6da91 !important;
 }
 
 .text-muted {
@@ -10824,3 +10824,4 @@ a.text-dark:hover, a.text-dark:focus {
   transition: box-shadow .3s;
   transition: box-shadow .3s, -webkit-box-shadow .3s;
 }
+/*# sourceMappingURL=style.css.map */
